# capdag

./: Cargo.toml  Cargo.toml.wstemplate  README.md  TEST_CATALOG.md  build.rs  version.txt
.github/workflows/: release.yml
docs/: 01-OVERVIEW.md  01-overview.md  02-FORMAL-FOUNDATIONS.md  02-formal-foundations.md  03-tagged-urn-domain.md  04-predicates.md  05-specificity.md  06-CAP-URN-STRUCTURE.md  06-cap-urn-structure.md  07-DISPATCH.md  07-dispatch.md  08-ranking.md  09-MACHINE-NOTATION.md  09-machine-notation.md  10-validation-rules.md  11-media-urns.md  12.1-ARCHITECTURE.md  12.1-architecture.md  12.2-FRAME-PROTOCOL.md  12.2-frame-protocol.md  12.3-HANDSHAKE.md  12.3-handshake.md  12.4-streaming.md  13.1-CARTRIDGE-RUNTIME.md  13.1-cartridge-runtime.md  13.2-input-output.md  13.3-peer-invocation.md  13.4-progress-and-logging.md  14.1-HOST-RUNTIME.md  14.1-host-runtime.md  14.2-RELAY-SWITCH.md  14.2-relay-switch.md  14.3-RELAY-TOPOLOGY.md  14.3-relay-topology.md  15.1-ORCHESTRATOR.md  15.1-orchestrator.md  15.2-EXECUTION.md  15.2-execution.md  15.3-progress-mapping.md  15.4-planner.md  (+23 more)
docs/bifaci/: 40-ORCHESTRATOR.md  54-RUST-VS-SWIFT.md
examples/: registry_usage.rs  test_registry_cap.rs  test_specific_cap.rs
macino/: .gitignore
macino/tests/: cartridge_scenarios.rs
src/: bundled_provider_hashes.rs  cartridge_discovery.rs  fabric_manifest_version.rs  lib.rs
src/bifaci/: frame.rs  (+16 more)
testcartridge/: Cargo.toml
testcartridge/src/: main.rs
tests/: cap_arg_stream_dispatch.rs  cartridge_scenarios.rs  orchestrator_integration.rs  plain_text_terminal_binding.rs
(+51 files in other folders)
