[package]
name = "testcartridge"
version = "0.1.0"
edition = "2021"

[dependencies]
capdag = { path = ".." }
serde_json = "1.0"
anyhow = "1.0"
ciborium = "0.2"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
tempfile = "3.0"

[[bin]]
name = "testcartridge"
path = "src/main.rs"
